# data_pipeline_app

./: .gitignore  Design.md  Pipfile  README  README.md  pyproject.toml
src/constant/: data.py  pipeline.py  schema.py
src/process/: ingestion_process.py  transformation_process.py
src/service/: base_service.py  donation_ingestion_service.py  donation_transformation_service.py
tests/resources/: donations_1.json
tests/service/: test_base_service.py  test_ingestion_service.py  test_transformation_service.py
